// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/audit_table/AuditTable should match snapshot with audits 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <FormattedMessage
          defaultMessage="Timestamp"
          id="audit_table.timestamp"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="User ID"
          id="audit_table.userId"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Action"
          id="audit_table.action"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="IP Address"
          id="audit_table.ip"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Session ID"
          id="audit_table.session"
        />
      </th>
    </tr>
  </thead>
  <tbody
    data-testid="auditTableBody"
  >
    <tr
      key="id_2"
    >
      <td
        className="whitespace--nowrap word-break--all"
      >
        <div>
          <div>
            <FormattedDate
              day="2-digit"
              month="short"
              value={1971-08-11T17:01:52.674Z}
              year="numeric"
            />
          </div>
          <div>
            <FormattedTime
              hour="2-digit"
              minute="2-digit"
              value={1971-08-11T17:01:52.674Z}
            />
          </div>
        </div>
      </td>
      <td
        className="word-break--all"
      >
        user_id_1
      </td>
      <td
        className="word-break--all"
      >
        Channels yeye
      </td>
      <td
        className="whitespace--nowrap word-break--all"
      >
        ::1
      </td>
      <td
        className="whitespace--nowrap word-break--all"
      >
        hb8febm9ytdiz8zqaxj18efqhy
      </td>
    </tr>
    <tr
      key="id_1"
    >
      <td
        className="whitespace--nowrap word-break--all"
      >
        <div>
          <div>
            <FormattedDate
              day="2-digit"
              month="short"
              value={1971-08-14T21:32:02.355Z}
              year="numeric"
            />
          </div>
          <div>
            <FormattedTime
              hour="2-digit"
              minute="2-digit"
              value={1971-08-14T21:32:02.355Z}
            />
          </div>
        </div>
      </td>
      <td
        className="word-break--all"
      >
        user_id_1
      </td>
      <td
        className="word-break--all"
      >
        Successfully logged in
      </td>
      <td
        className="whitespace--nowrap word-break--all"
      >
        ::1
      </td>
      <td
        className="whitespace--nowrap word-break--all"
      />
    </tr>
  </tbody>
</table>
`;

exports[`components/audit_table/AuditTable should match snapshot with no audits 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th>
        <FormattedMessage
          defaultMessage="Timestamp"
          id="audit_table.timestamp"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="User ID"
          id="audit_table.userId"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Action"
          id="audit_table.action"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="IP Address"
          id="audit_table.ip"
        />
      </th>
      <th>
        <FormattedMessage
          defaultMessage="Session ID"
          id="audit_table.session"
        />
      </th>
    </tr>
  </thead>
  <tbody
    data-testid="auditTableBody"
  />
</table>
`;
